--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
   </header>
 
   <div class="container">
-    <img src="db55da2f-7858-469b-b856-d445473dc109.jpg" alt="Foto Jesillia" class="profile-pic" />
+<img src="jesillia.jpg" alt="Foto Jesillia" class="profile-pic" />
     <h2>Jesillia Meyvi Pandelaki</h2>
     <div class="info">
       <p><strong>NIM:</strong> 241011010044</p>
@@ -99,7 +99,7 @@
 
     <div class="structure">
       <h2>Struktur Senyawa NaOH</h2>
-      <img src="cc3ad8ea-ff2a-4e7a-934f-e66e7290644a.png" alt="Struktur NaOH" />
+<img src="naoh.png" alt="Struktur NaOH" />
     </div>
 
     <div class="motivation">
@@ -117,3 +117,4 @@
   </footer>
 </body>
 </html>
+
