--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
   </header>
 
   <div class="container">
-<img src="jesillia.jpg" alt="Foto Jesillia" class="profile-pic" />
+<img src="./jesillia.jpg" alt="Foto Jesillia" class="profile-pic" />
     <h2>Jesillia Meyvi Pandelaki</h2>
     <div class="info">
       <p><strong>NIM:</strong> 241011010044</p>
@@ -99,7 +99,7 @@
 
     <div class="structure">
       <h2>Struktur Senyawa NaOH</h2>
-<img src="naoh.png" alt="Struktur NaOH" />
+<img src="./naoh.png" alt="Struktur NaOH" />
     </div>
 
     <div class="motivation">
@@ -117,4 +117,5 @@
   </footer>
 </body>
 </html>
+
 
