--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
       <p><strong>NIM:</strong> 241011010044</p>
       <p><strong>Fakultas:</strong> Matematika dan Ilmu Pengetahuan Alam</p>
       <p><strong>Jurusan:</strong> Kimia</p>
-      <p><strong>Universitas:</strong> Sam Ratulangi</p>
+      <p><strong>Universitas:</strong> Sam Ratulangi Manado</p>
     </div>
 
     <div class="structure">
@@ -117,5 +117,6 @@
   </footer>
 </body>
 </html>
+
 
 
